# ffmpeg_flutter

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/opencv_native/: MainActivity.kt
lib/: app.dart  main.dart
lib/data/services/: gallery_service.dart  video_service.dart
lib/data/typedefs/: native.dart
lib/di/: di.config.dart  di.dart
lib/domain/services/: gallery_service.dart  video_service.dart
lib/domain/utils/: logger.dart
lib/presentation/cubit/: home_cubit.dart  home_state.dart
lib/presentation/screens/: home_screen.dart
lib/presentation/utils/: logger.dart
lib/presentation/widgets/: video_player.dart
native_ffmpeg/: README.md  pubspec.yaml
native_ffmpeg/android/: CMakeLists.txt  build.gradle  settings.gradle
native_ffmpeg/android/src/main/: AndroidManifest.xml
native_ffmpeg/lib/: bindings.dart  functions.dart  native_ffmpeg.dart  native_ffmpeg_bindings_generated.dart  typedefs.dart
native_ffmpeg/scripts/: export-host-variables.sh  init.sh
native_ffmpeg/scripts/libx265/: download.sh
native_ffmpeg/src/: logger.h  native_ffmpeg.cpp
